--- a/videocatalog/templates/gallery.html.j2
+++ b/videocatalog/templates/gallery.html.j2
@@ -26,6 +26,7 @@
       <h1>Video Gallery</h1>
       <div class="controls">
         <input type="text" class="search-box" id="search" placeholder="Search transcripts and tags...">
+        <button class="btn hidden-toggle" id="showHiddenBtn">Vis skjulte (0)</button>
         <button class="btn" id="expandAll">Expand All</button>
         <button class="btn" id="collapseGroups">Collapse Sources</button>
       </div>
