Clarify gallery button labels, use English

--- a/videocatalog/templates/gallery.html.j2
+++ b/videocatalog/templates/gallery.html.j2
@@ -27,8 +27,8 @@
       <div class="sticky-header" id="stickyHeader">
         <div class="controls">
           <input type="text" class="search-box" id="search" placeholder="Search transcripts and tags...">
-          <button class="btn hidden-toggle" id="showHiddenBtn">Vis skjulte (0)</button>
-          <button class="btn" id="expandAll">Expand All</button>
+          <button class="btn hidden-toggle" id="showHiddenBtn">Show Hidden (0)</button>
+          <button class="btn" id="expandAll">Expand Transcripts</button>
           <button class="btn" id="collapseGroups">Collapse Sources</button>
         </div>
         <div class="tag-mode-toolbar collapsed" id="tagModeToolbar">
